# costoflife.ui

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  package.json  rollup.config.js  tailwind.config.js  webpack.config.js
assets/CostOf.Life-logo/: info.txt
public/: index.html
src/: App.svelte  Calculator.svelte  Tailwindcss.svelte  main.rs
